<resources>
    <string name="app_name">SanTieba</string>
    <string name="about">帮助</string>
    <string name="floor">楼</string>
    <string name="poster">楼主</string>
    <string name="level">lv</string>
    <string name="action_settings">设置</string>
    <string name="action_sign_in">登录</string>
    <string name="add_fail">发送失败</string>
    <string name="add_success">发送成功</string>
    <string name="advantage_settings">高级设置</string>
    <string name="begin_sign_in">开始签到</string>
    <string name="sign_in_single">签</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_confirm">确认</string>
    <string name="content_loading">内容还没加载出来呢</string>
    <string name="copy_bduss">复制BDUSS</string>
    <string name="copy_link">复制链接</string>
    <string name="copied_to_clipboard">已复制至剪贴板</string>
    <string name="unsubscribe">取消关注</string>
    <string name="unsubscribe_success">取消关注成功</string>
    <string name="subscribe_success">关注成功</string>
    <string name="custom_settings">自定义设置</string>
    <string name="default_imei">352316052799049</string>
    <string name="disable_msg">不可用</string>
    <string name="empty_content">你的回复哪去了 (╯°Д°)╯︵ ┻━┻</string>
    <string name="empty_title">你的标题哪去了 (╯°Д°)╯︵ ┻━┻</string>
    <string name="error_field_required">此处不能为空</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_invalid_email">用户名不合法</string>
    <string name="finish_soon">不要着急，马上就好了</string>
    <string name="image_load_failed">图片加载失败</string>
    <string name="level_up_7">7级以上的吧</string>
    <string name="subscribe">关注</string>
    <string name="subscribed">已关注</string>
    <string name="mutual_subscribe">互相关注</string>
    <string name="subscribe_forum">关注的吧</string>
    <string name="logout">登出</string>
    <string name="lz_only">只看楼主</string>
    <string name="thread_good">精品</string>
    <string name="may_be_banned">你可能被禁言了</string>
    <string name="most_visit">最常访问的吧</string>
    <string name="my_store">我的收藏</string>
    <string name="my_msg">我的消息</string>
    <string name="my_post">我的帖子</string>
    <string name="name_show">昵称显示</string>
    <string name="navigation_drawer_close">关闭导航栏</string>
    <string name="navigation_drawer_open">打开导航栏</string>
    <string name="network_error">网络连接似乎有问题</string>
    <string name="one_click_sign">一键签到</string>
    <string name="fans">粉丝</string>
    <string name="permission_deny">授权失败，您可以自行到权限管理处开启</string>
    <string name="permission_granted">已授予权限，感谢支持</string>
    <string name="post_client">发帖客户端</string>
    <string name="post_text">说出你的故事</string>
    <string name="post_thread">发帖</string>
    <string name="post_title">来个标题</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_user">用户名</string>
    <string name="reverse">倒序</string>
    <string name="request_permission">请求授予权限</string>
    <string name="search">搜索</string>
    <string name="sign_in_description">每日最佳签到时间 9:00–16:00、 19:00–22:00</string>
    <string name="sure_to_logout">确认登出？</string>
    <string name="switch_account">切换帐号</string>
    <string name="system_setting">系统设置</string>
    <string name="theme">主题</string>
    <string name="thread_share">分享</string>
    <string name="thread_store">收藏</string>
    <string name="tieba_list_view">贴吧列表视图</string>
    <string name="time_error">时间有问题</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_settings">设置</string>
    <string name="too_frequent">操作太频繁啦</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="user_thread">TA的帖子</string>
    <string name="personal_thread">我的帖子</string>
    <string name="personal_fans">我的粉丝</string>
    <string name="personal_like">我的关注</string>
    <string name="personal_store">我的收藏</string>
    <string name="vcode">验证码</string>
    <string name="wait_plz">请稍等…</string>
    <string name="go_forum">进吧</string>
    <string name="open_in_browser">浏览器中打开</string>
    <string name="rank">排行榜</string>
    <string name="title_miui_fav">%1$s_贴吧 Lite</string>
    <string name="title_notifications">消息</string>
    <string name="title_collect">收藏</string>
    <string name="title_explore">动态</string>
    <string name="title_user">我</string>
    <string name="title_search">搜索</string>
    <string name="hint_search">进吧、搜贴</string>
    <string name="hint_search_in_ba">在 %1$s 吧内搜索</string>
    <string name="my_info_history">浏览历史</string>
    <string name="sidebar_exit">退出</string>
    <string name="shortcut_oksign">一键签到</string>
    <string name="shortcut_my_collect">我的收藏</string>
    <string name="shortcut_my_message">我的消息</string>
    <string name="forum_list_title">我关注的贴吧</string>
    <string name="title_login">登录</string>
    <string name="title_refresh">刷新</string>
    <string name="title_copy_link">复制链接</string>
    <string name="toast_copy_success">已复制到剪贴板</string>
    <string name="title_share">分享</string>
    <string name="title_history">历史记录</string>
    <string name="title_history_delete">清空历史记录</string>
    <string name="toast_delete_success">清除成功啦( •̀ ω •́ )✧</string>
    <string name="toast_double_key_exit">再按一次退出程序</string>
    <string name="title_about">关于</string>
    <string name="my_info_settings">设置</string>
    <string name="title_settings">设置</string>
    <string name="title_settings_custom">个性化</string>
    <string name="tip_signed">已签</string>
    <string name="title_oksign">一键签到</string>
    <string name="title_open_in_browser">在浏览器内打开</string>
    <string name="title_pure_read">沉浸阅读</string>
    <string name="content_avatar">头像</string>
    <string name="tip_login">请先登录</string>
    <string name="tip_loading">正在加载…</string>
    <string name="title_sort">倒序浏览</string>
    <string name="title_see_lz">只看楼主</string>
    <string name="toast_param_error">参数错误</string>
    <string name="title_see_lz_on">查看全部</string>
    <string name="title_sort_on">正序浏览</string>
    <string name="title_collect_on">取消收藏</string>
    <string name="toast_collect_remove_success">已移除收藏</string>
    <string name="toast_collect_add_success">已添加收藏</string>
    <string name="toast_collect_remove_error">移除收藏失败 %s</string>
    <string name="toast_collect_add_error">添加收藏失败</string>
    <string name="tip_thread_reply">写回复</string>
    <string name="title_reply">回复</string>
    <string name="tip_reply">说点什么</string>
    <string name="title_send">发送</string>
    <string name="tip_load_end">没有更多了</string>
    <string name="title_floor">查看回复</string>
    <string name="tip_floor_more"><![CDATA[查看更多回复 >]]></string>
    <string name="tip_floor_btn">查看回复</string>
    <string name="title_account">账号管理</string>
    <string name="title_block_settings">屏蔽管理</string>
    <string name="tip_verify_code">请输入图中的验证码</string>
    <string name="title_verify_code">请输入验证码</string>
    <string name="title_submit">提交</string>
    <string name="toast_reply_success">回贴成功</string>
    <string name="toast_verify_code_empty">不能为空</string>
    <string name="title_black_list">黑名单管理</string>
    <string name="title_input">请输入</string>
    <string name="tip_input">请输入</string>
    <string name="title_white_list">白名单管理</string>
    <string name="title_add_black">添加黑名单</string>
    <string name="title_add_white">添加白名单</string>
    <string name="tip_multi_block">使用空格分割多个词语</string>
    <string name="toast_collect_update_success">更新收藏成功</string>
    <string name="toast_collect_update_error">更新收藏失败 %1$s</string>
    <string name="title_main">首页</string>
    <string name="title_jump_page">跳页</string>
    <string name="tip_jump_page">当前 %1$d/%2$d 页</string>
    <string name="toast_jump_page_too_big">您输入的页码不对哦</string>
    <string name="title_default">贴吧 Lite</string>
    <string name="my_info_collect">我的收藏</string>
    <string name="title_my_collect">我的收藏</string>
    <string name="title_settings_about">杂项</string>
    <string name="tip_load_failed">加载失败，点击重试</string>
    <string name="title_at_me">提到我的</string>
    <string name="tip_avatar">头像</string>
    <string name="text_message_list_item_source">来自 %1$s吧</string>
    <string name="text_message_list_item_reply_my_thread">回复我的主题：%1$s</string>
    <string name="title_reply_me">回复我的</string>
    <string name="title_to_thread">查看主题</string>
    <string name="tip_position">%1$s / %2$s</string>
    <string name="title_floor_loaded">%1$s 楼的回复</string>
    <string name="title_send_to_desktop">发送到桌面</string>
    <string name="toast_send_to_desktop_success">已尝试发送快捷方式</string>
    <string name="toast_send_to_desktop_failed">快捷方式创建失败：%1$s</string>
    <string name="toast_reply_failed">回贴失败(%1$d) %2$s</string>
    <string name="title_exit_account">退出登录</string>
    <string name="title_copy_bduss">复制 BDUSS</string>
    <string name="title_my_tail">我的小尾巴</string>
    <string name="title_new_account">添加账号</string>
    <string name="title_switch_account">切换账号</string>
    <string name="toast_exit_account_success">退出登录成功，请重新登录</string>
    <string name="search_order_new">新贴在前</string>
    <string name="search_order_only_thread">仅主题贴</string>
    <string name="button_cancel">取消</string>
    <string name="title_save_image">保存图片</string>
    <string name="title_pure_read_on">关闭沉浸阅读</string>
    <string name="title_delete">删除</string>
    <string name="tip_collect">您上次收藏到第 %1$s 楼</string>
    <string name="tip_lz">楼主</string>
    <string name="title_check_beta_update">接收 Beta 版更新</string>
    <string name="title_auto_sign_time">自动签到时间</string>
    <string name="tip_check_beta_update">Beta 版本可能不稳定</string>
    <string name="tip_about">当前版本 %1$s</string>
    <string name="title_update_stoken">正在更新登录信息</string>
    <string name="tip_account_error">提示：若您的账号登录失效，可点击“添加账号”，然后登录相同的账号即可更新登录信息。</string>
    <string name="tips_message_reply">你有 %1$s 条新回复</string>
    <string name="tips_message_at">有 %1$s 人提到了你</string>
    <string name="my_info_theme">主题选择</string>
    <string name="my_info_night">夜间</string>
    <string name="title_theme">主题选择</string>
    <string name="title_unfollow">取消关注</string>
    <string name="tip_no_intro">这个人很懒，什么都没有写</string>
    <string name="url_user_home"><![CDATA[https://tieba.baidu.com/home/main?un=%1$s&tab=%2$d]]></string>
    <string name="title_block">屏蔽此用户</string>
    <string name="toast_add_success">添加成功</string>
    <string name="toast_unlike_success">取消关注成功</string>
    <string name="toast_unlike_failed">取消关注失败 %1$s</string>
    <string name="tip_store_deleted">贴子已被删除</string>
    <string name="content_top">置顶</string>
    <string name="tip_forum_header_liked">LV%1$s %2$s</string>
    <string name="tip_forum_name">%1$s吧</string>
    <string name="toast_sign_success">签到成功， 经验 +%1$s。你是今天第 %2$s 个签到的。</string>
    <string name="button_sign_in">签到</string>
    <string name="show_signed">已签到</string>
    <string name="show_unsigned">未签到</string>
    <string name="button_like">关注</string>
    <string name="toast_like_success">关注成功，你是第 %s 个关注本吧的</string>
    <string name="tab_forum_1">看贴</string>
    <string name="tab_forum_good">精华</string>
    <string name="tip_good">精</string>
    <string name="title_message">我的消息</string>
    <string name="button_no">否</string>
    <string name="button_yes">是</string>
    <string name="title_agreed">已点赞</string>
    <string name="title_agree">点赞</string>
    <string name="toast_agree_failed">点赞失败 %1$s</string>
    <string name="toast_unagree_failed">取消点赞失败 %1$s</string>
    <string name="title_copy_forum_name">复制吧名</string>
    <string name="toast_error">加载失败(%1$d) %2$s</string>
    <string name="title_clear_cache">清除缓存</string>
    <string name="toast_clear_cache_success">清除缓存成功</string>
    <string name="tip_cache">当前共有缓存 %1$s</string>
    <string name="toast_switch_success">切换成功</string>
    <string name="tip_no_little_tail">你还没有设置小尾巴</string>
    <string name="title_dialog_exit_account">确认退出登录吗？</string>
    <string name="tip_new_version">发现新版本 %1$s</string>
    <string name="title_dialog_update_stoken">您的登录信息需要更新</string>
    <string name="update_tip_no_header">更新</string>
</resources>