<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_single"
        android:icon="@drawable/ic_lz_only"
        android:title="@string/lz_only"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_reverse"
        android:icon="@drawable/ic_order"
        android:title="@string/reverse"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_star"
        android:icon="@drawable/ic_thread_store"
        android:title="@string/thread_store"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_share"
        android:title="@string/thread_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_link"
        android:title="@string/copy_link"
        app:showAsAction="never" />
</menu>
